<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[12]" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/games"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_text_games"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/games_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/platforms"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_text_platforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/platforms_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bio"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edit_text_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio_hint"
                android:inputType="textMultiLine"
                android:singleLine="false" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>