<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/home_btn_browse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/find_players"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_text_username" />

    <Button
        android:id="@+id/home_btn_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/chat"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/home_btn_browse"
        app:layout_constraintStart_toStartOf="@+id/home_btn_browse"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_browse" />

    <Button
        android:id="@+id/home_btn_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/home_btn_chat"
        app:layout_constraintStart_toStartOf="@+id/home_btn_chat"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_chat" />

    <com.loopj.android.image.SmartImageView
        android:id="@+id/home_image_profile"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/home_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_image_profile"
        tools:text="Username Here" />

    <Button
        android:id="@+id/home_btn_logout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/home_btn_profile"
        app:layout_constraintStart_toStartOf="@+id/home_btn_profile"
        app:layout_constraintTop_toBottomOf="@+id/home_btn_profile" />
</android.support.constraint.ConstraintLayout>